# sdk-python

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
src/apidash/: __init__.py  _ssrf.py  client.py  types.py
src/apidash/middleware/: __init__.py  asgi.py  django.py  wsgi.py
src/peekapi/: __init__.py  _consumer.py  client.py  types.py
src/peekapi/middleware/: __init__.py  asgi.py  django.py  wsgi.py
tests/: conftest.py  test_asgi.py  test_client.py  test_consumer.py  test_django.py  test_ssrf.py  test_wsgi.py
