[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "apidash"
version = "0.1.0"
description = "Zero-dependency Python SDK for API Usage Dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["api", "analytics", "middleware", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
]

[project.urls]
Homepage = "https://github.com/api-usage-dashboard/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/apidash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
