[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peekapi"
dynamic = ["version"]
description = "Zero-dependency Python SDK for PeekAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["api", "analytics", "middleware", "dashboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: FastAPI",
  "Framework :: Flask",
]

[project.urls]
Homepage = "https://github.com/peekapi-dev/sdk-python"

[tool.hatch.version]
path = "src/peekapi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/peekapi"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25", "ruff>=0.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
